--- a/obfustr-macros/Cargo.toml
+++ b/obfustr-macros/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+getrandom = "0.2.15"
 proc-macro2 = "1.0.89"
 quote = { version = "1.0.37" }
-rand = "0.8.5"
 syn = { version = "2.0.85", default-features = false }
