--- a/obfustr-macros/Cargo.toml
+++ b/obfustr-macros/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "obfustr-macros"
+description = "proc macros for [`obfustr`]"
 version = "0.0.0"
+license = "BSD-2-Clause"
+
+rust-version = "1.82"
 edition = "2021"
+publish = ["crates-io"]
 
 [lib]
 proc-macro = true
