--- a/obfustr/Cargo.toml
+++ b/obfustr/Cargo.toml
@@ -1,7 +1,18 @@
 [package]
 name = "obfustr"
+description = "compile-time obfuscation of string literals (also byte and C strings)"
 version = "0.0.0"
+license = "BSD-2-Clause"
+
+rust-version = "1.82"
 edition = "2021"
+publish = ["crates-io"]
+
+repository = "https://github.com/de-vri-es/obfustr-rs"
+documentation = "https://docs.rs/obfustr"
+readme = "README.md"
+keywords = ["obfuscation", "obfuscate", "secret", "string", "literal"]
+categories = ["cryptography"]
 
 [dependencies]
 obfustr-macros = { version = "0.0.0", path = "../obfustr-macros" }
