--- a/obfustr/Cargo.toml
+++ b/obfustr/Cargo.toml
@@ -15,7 +15,7 @@ keywords = ["obfuscation", "obfuscate", "secret", "string", "literal"]
 categories = ["cryptography"]
 
 [dependencies]
-obfustr-macros = { version = "0.0.0", path = "../obfustr-macros" }
+obfustr-macros = { version = "=0.0.0", path = "../obfustr-macros" }
 
 [dev-dependencies]
 assert2 = "0.3.15"
